        24/12/23 : Obtimisation général + Nouvelle fenêtre adapative de m'essage d'érreur
        22/12/23 : ajout bouton actualisation sur les fenêtre réduit
        18/12/23 : ajout bouton réduire sur les fenêtre clonées
        18/12/23 : Modification de la barre des tahche pour l'ajout de boutons fonctionnel ! 
        17/12/23 : Obtimisation des themes en fonction des changements réaliser
        17/12/23 : Simplification de la création de fenêtres
        14/12/23 : Couleur, fond d'écran, calculatrice W7...
        13/12/23 : Ajout theme W7 + Réglage fenêtre en premier plan 
        12/12/23 : Séparation de la page principal pour plus d'obtion - ajout bios, boot...
Old 7 : 10/12/23 : Continuer le thème XP + vrai calc et notepad
        09/12/23 : rangement des fichiers dans le répertoire github
        09/12/23 : Continuer le thème XP avec des optimisations général
        02/12/23 : Mise a jours de google sites pour que ce soit automatique
        02/12/23 : Création de boutons thèmes
        02/12/23 : Ajouts d'un "BIOS" pour prise en charge de thème
        02/12/23 : Ouverture d'un HTML simple en plusieurs fichiers css/html/js
        02/12/23 : Reprise du projet, avec la perte de l'ancien compte "Polocrafting" (à cause de leurs sécurités à la con)
Old 6 : 31/05/23 : Ajout écran verrouillage (+ ajout version dans info sur cette page)
        31/05/23 : Ajout faux redémarrage
        25/05/23 : Mise à jour de la fenêtre de création de fond d'écran
        25/05/23 : Harmonisation des arrondis
        25/05/23 : Ajout du bouton "télécharger" sur la page
        25/05/23 : Ajout du fichier sur GitHub
        21/05/23 : Mise à jour du fond d'écran
        07/05/23 : Mise à jour du fond d'écran avec les bonnes couleurs de Microsoft
        11-19/04/23 : Changement de Visionneur YouTube
        07-10-17-19-20-21-23/03/23 : Travail sur le Visionneur YouTube et réparation ordres des fenêtres
        05/03/23 : Ajout de la photo de profil