@@ -35,12 +35,13 @@
         <h1>Windows Blurry</h1>
         <p>Petit projet fait en solo car j'aime bien travailler sur mon temps libre...</p>
         <p>Dans un premier temps créé sur le thème "W367", j'ai voulu développer le projet en intégrant des thèmes comme XP puis 7.</p>
-        <p>Franchement seul, j'aurais galéré, donc je crédite les projets que j'ai utilisés :</p>
+        <p>Franchement seul, j'aurais galéré, c'est donc pour ça que je me suis aidé des IA et de projet comme :</p>
         <p>Pour le thème Windows XP, le projet GitHub :
             <br> <a href="https://github.com/botoxparty/XP.css" target="_blank">https://github.com/botoxparty/XP.css/</a> </p>
         <p>Pour le thème Windows 7, le projet GitHub :
             <br> <a href="https://github.com/khang-nd/7.css/" target="_blank">https://github.com/khang-nd/7.css/</a> </p>
-        <p>Pendant un temps, j'ai mis le projet de côté, mais avec l'idée que je n'avais pas eue de @Zerbaib (sur GitHub), j'ai repris le projet avec joie :) </p>
+        <p>Supper projet qui m'on bien aidé sur les themes :)</p>
+        <p>Pendant un temps, j'ai mis le projet de côté, mais avec l'idée que je n'avais pas eue de @Zerbaib (sur GitHub) de ne pas utiliser qu'une seul page HTML mais tout un projet, j'ai donc repris le projet et j'adore chaque petit changement que je peut faire :D </p>
         <h1>ChangeLog :</h1>
 
         <iframe id="mon-iframe" width="600" height="400"></iframe>
